Bug #19808 Online config. Wrong error message if DataMemory less than a data on cluster
Submitted: 14 May 2006 22:53 Modified: 6 Dec 2006 5:46
Reporter: Serge Kozlov
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:5.1.10 (beta) OS:Linux (Linux FC4)
Assigned to: Bugs System Target Version:

[14 May 2006 22:53] Serge Kozlov
Description:
A cluster has a data. DataMemory was decreased to min.value in config.ini and management
daemon was restarted. New value of DataMemory cannot work for data of cluster because it
isn't enough. But the error message says nothing about wrong value (too small) of
DataMemory if try to restart data nodes for case above:

Time: x 14 May 2006 - 22:34:34
Status: Temporary error, restart node
Message: Internal program error (failed ndbrequire) (Internal error, programming
 error or missing error message, please report a bug)
Error: 2341
Error data: restore.cpp
Error object: RESTORE (Line: 1150) 0x0000000a
Program: /home/ndbdev/skozlov/builds/libexec/ndbd
Pid: 4317
Trace: /space/run/ndb_2_trace.log.1
Version: Version 5.1.10 (beta)
***EOM***

How to repeat:
1. Create config.ini 2 ndbd nodes and DataMemory = 200M (and 1 mgmd, 1 mysqld)
2. Start cluster.
3. Run ./load_tpcb.pl ndb16 3306 root BLANK ndb
4. Change DataMemory = 1M in config.ini
5. Stop ndb_mgmd 
6. Start ndb_mgmd (new value DataMemory applied)
7. Restart data node (X RESTART)
8. Look at error_log.

Suggested fix:
Add correct error message if new value of DataMemory cannot be applied for a data on
cluster.
[13 Oct 2006 16:08] Serge Kozlov
Same error message for 5.1.13-bk. Argument list for load_tpcb.pl was a bit changed. Now
need to use following step:
3. Run ./load_tpcb.pl -sp /tmp/mysql.sock -sock ndb16 3306 root BLANK ndb
[14 Nov 2006 2:42] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/15280

ChangeSet@1.2320, 2006-11-14 09:33:43+08:00, Justin.He@dev3-47.dev.cn.tlan +1 -0
  BUG#19808, Online config. Wrong error message if DataMemory less than a data on cluster
[6 Dec 2006 5:46] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix in 5.1.14 changelog.