BUG#19808, Online config. Wrong error message if DataMemory less than a data on cluster

storage/ndb/src/kernel/blocks/dbdict/Dbdict.cpp:
  add err message when error occur